# aichamp-rl-environment-task

./: .env.example  .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  time_log.md
tasks/task1/: grader.py  prompt.md
tasks/task1/tests/: test_preprocessing.py
tasks/task1/tools/: data_pipeline.py
